--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ install:
   - sudo apt-get -y install linux-headers-virtual
   - sudo apt-get -y install virtualbox-4.2
   - VBoxManage -v
+  - ls -l  /var/lib/gems/
   - wget http://files.vagrantup.com/packages/be0bc66efc0c5919e92d8b79e973d9911f2a511f/vagrant_1.0.5_i686.deb
   - sudo dpkg -i vagrant_1.0.5_i686.deb
 script:
