--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ install:
   - wget http://download.virtualbox.org/virtualbox/debian/oracle_vbox.asc -O- | sudo apt-key add -
   - sudo apt-get update
   - apt-cache search linux-headers
-  - sudo apt-get -y install linux-headers-$(uname -r)
+  - sudo apt-get -y install linux-headers-generic
   - sudo apt-get -y install virtualbox-4.2
   - VBoxManage -v 
   - wget http://files.vagrantup.com/packages/be0bc66efc0c5919e92d8b79e973d9911f2a511f/vagrant_1.0.5_i686.deb
